<resources>
    <string name="app_name">户外探子</string>
    <string name="share_link">http://eqxiu.com/s/RMVuagwm</string>
    <string name="share_msg">最精准的户外路线提供者，为您探明前行的路！\n</string>
    <string name="app_msg">为您探明前行的路</string>
    <string name="app_platform">debug</string>
    <string name="action_recent">最近查询</string>
    <string name="action_setting">设置</string>
    <string name="action_submit">提交</string>
    <string name="action_reset">恢复默认</string>
    <string name="action_type">旅行类型</string>
    <string name="action_report">举报</string>
    <string name="action_favorite">收藏</string>
    <string name="action_edit">编辑</string>
    <string name="action_del">删除</string>

    <string name="travel_type_bike">骑行</string>
    <string name="travel_type_hike">徒步</string>
    <string name="travel_type_moto">摩托</string>
    <string name="travel_type_car">自驾</string>
    <string name="travel_type_other">其他</string>

    <string name="travel_type_dialog_title">请选择旅行类型：</string>
    <string name="title_activity_where_go">选择目的地</string>
    <string name="title_activity_prepare_detail">准备信息</string>

    <string name="guide_route_name">行程攻略</string>
    <string name="guide_hotel_name">食宿休息</string>
    <string name="guide_food_name">饮食补给</string>
    <string name="guide_weather_name">天气路况</string>
    <string name="guide_view_name">风景</string>

    <string name="info_prepare_title">准备信息</string>
    <string name="info_prepare_go">查看攻略</string>
    <string name="info_scenic_title">沿途风景</string>

    <!--setting-->
    <string name="preference">private preference</string>

    <!--recent dialog-->
    <string name="ok_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="delete_recent_title">是否要删除该条记录？</string>
    <string name="delete_image_title">是否要删除该张图片？</string>
    <string name="dialog_report_title">是否要举报这条信息？</string>
    <string name="delete_action_title">是否要进行删除操作？</string>
    <string name="delete_message_action_title">是否要清空当前列表下所有消息？</string>
    <string name="verified_message_action_title">是否将列表下所有消息设为已读？</string>
    <string name="back_action_title">是否退出此次编辑？</string>
    <string name="reset_dialog_title">是否要恢复默认设置？</string>
    <string name="logout_dialog_title">是否退出登陆？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>


    <!--activity title-->
    <string name="title_activity_home_setting">设置</string>
    <string name="title_setting_feedback">反馈</string>
    <string name="title_attention">注意事项</string>
    <string name="title_chart_setting">设置</string>
    <string name="title_activity_about_setting">关于</string>

    <string name="ptr_pull_text">下拉刷新</string>
    <string name="ptr_refreshing_text">加载中...</string>
    <string name="ptr_release_text">加载完成</string>

    <!--home setting-->
    <string name="feedback_title">反馈</string>
    <string name="feedback_hint">您的反馈将帮助我们成长！\n\n如果您留下了联系方式，我们会尽快对您的反馈进行回复。</string>
    <string name="submit_feedback">提交意见反馈</string>

    <!--point-->
    <string name="point_city">城市</string>
    <string name="point_county">县城</string>
    <string name="point_town">乡镇</string>
    <string name="point_vallage">村庄</string>
    <string name="point_mountain">山峰、垭口、达坂</string>
    <string name="point_camp">露营点</string>
    <string name="point_scenic">风景点</string>
    <string name="point_tunnel">隧道</string>
    <string name="point_bridge">桥梁</string>
    <string name="point_gas_station">加油站</string>
    <string name="point_other">其他（兵站，道班等）</string>
    <string name="point_check_point">检查点</string>
    <string name="title_activity_chart_setting">ChartSettingActivity</string>
    <string name="point_start_end">起/终点</string>

    <!--welcome page-->
    <string name="title_activity_app_init">AppInitActivity</string>
    <string name="title_activity_whats_new">WhatsNewActivity</string>
    <string name="welcome_done">开始</string>
    <string name="route_plan_title">选择计划</string>

    <!--around-->
    <string name="around_feedback_hint">请输入评论</string>

    <!--map-->
    <string name="normal_text">2D平面图</string>
    <string name="satellite_text">卫星图</string>
    <string name="overlook_text">3D俯视图</string>
    <string name="route_mark_text">底图标注</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="route_date_menu">总览</string>
    <string name="elevation_text">海拔</string>
    <string name="map_text">地图</string>
    <string name="guide_text">攻略</string>
    <string name="rating_hard">难度</string>
    <string name="rating_view">风景</string>
    <string name="rating_road">路况</string>
    <string name="login_with_weixin">微信登陆</string>
    <string name="login_with_sina_weibo">微博登陆</string>
    <string name="login_with_qzone">QQ登陆</string>
    <string name="comment_success">发表成功</string>
    <string name="comment_failed">发表失败，请重试</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_success">登陆成功</string>
    <string name="unknow_user">匿名用户</string>
    <string name="around_overview">简介</string>
    <string name="around_comment">评论</string>
    <string name="no_result">暂无数据</string>
    <string name="no_comment_result">暂无评论</string>
    <string name="no_answer_result">暂无回答</string>
    <string name="no_network_result">网络出错</string>
    <string name="network_no_result">网络出错，点击重试</string>
    <string name="plan_header_hint">点击返回总览</string>
    <string name="exit">再按一次退出程序</string>
    <string name="no_support">暂不支持</string>

    <string name="login_text">点击登陆</string>
    <string name="logout">退出登陆</string>
    <string name="version_name">版本</string>
    <string name="contact_qq">1815608211</string>
    <string name="contact_qq_group">548772599</string>
    <string name="contact_email">huwaitanzi@163.com</string>
    <string name="copy">点击复制</string>
    <string name="copy_success">已复制到剪贴板</string>
    <string name="text_send">转发</string>
    <string name="text_comment">评论</string>
    <string name="text_good">赞</string>
    <string name="text_like">赞</string>
    <string name="text_report">举报</string>
    <string name="text_copy">复制</string>
    <string name="text_replay">回复</string>
    <string name="text_commented">您已经赞过啦，亲~</string>
    <string name="report_success">举报成功，正在审核中...</string>
    <string name="favorite_success">收藏成功，可在我的收藏中查看</string>
    <string name="cancel_favorite">取消收藏</string>
    <string name="action_error">操作失败</string>

    <string name="team_make_title">结伴</string>
    <string name="q_a_create_title">提问题</string>
    <string name="team_make_request_title">发起结伴</string>
    <string name="team_make_personal_request_title">我的结伴</string>
    <string name="team_make_time_title">时间</string>
    <string name="team_make_destination_title">目的地</string>
    <string name="team_make_destination_type_title">计划</string>
    <string name="team_make_title_title">标题</string>
    <string name="team_make_contact_title">联系方式</string>
    <string name="team_make_content_title">内容</string>
    <string name="team_make_type_title">旅行方式</string>
    <string name="team_make_time_start">出发日期</string>
    <string name="team_make_time_end">结束日期</string>
    <string name="team_make_time_date">出行日期</string>
    <string name="team_make_date_setting_text">设置日期</string>
    <string name="team_make_title_edit_hint">输入结伴标题（不超过40个字）</string>
    <string name="team_make_content_edit_hint">输入结伴内容</string>
    <string name="team_make_contact_edit_hint">请设置您的联系方式</string>
    <string name="team_make_destination_edit_hint">输入目的地（例：北京-拉萨）</string>
    <string name="team_make_destination_hot">热门目的地</string>
    <string name="team_make_type_edit_hint">输入旅行类型（可从列表中选择）</string>
    <string name="team_make_type_hot">热门旅行类型</string>
    <string name="loading_text">努力加载中...</string>
    <string name="loading_press_text">点击加载更多</string>
    <string name="loading_no_more_text">已经到底了~</string>
    <string name="wechat_text">微信</string>
    <string name="setting_qq_text">设置QQ</string>
    <string name="setting_phone_text">设置手机</string>
    <string name="setting_wechat_text">设置微信</string>
    <string name="contact_default_text">未设置</string>
    <string name="warning_no_pass">未通过审核，请修改后重新提交！</string>
    <string name="warning_wait_pass">正在审核中，请耐心等待！</string>
    <string name="road_feedback_hint">上传您知道的路况信息，方便更多驴友！人人都是户外探子！</string>
    <string name="road_position_feedback_hint">请填写路况所在地信息</string>
    <string name="moment_hint">说点什么吧</string>
    <string name="q_a_title_hint">完整而清晰的问题标题能帮助您更快获得回答</string>
    <string name="q_a_content_hint">更详细的说明问题，或提供与之相关的背景信息和参考资料</string>
    <string name="hotel_contact_detail_text">为了保证信息的质量与准确性，请联系我们来添加／修改住宿信息！</string>
    <string name="hotel_feedback_text">住宿上传</string>

    <string name="piece">张</string>
    <string name="you_have_a_select_limit">最多选择%1$s张图片</string>
    <string name="select_complete">完成(%1$s/%2$s)</string>
    <string name="complete">完成</string>
    <string name="all_images">全部图片</string>

    <string name="team_make_filter_hint">搜索/筛选约伴信息</string>
    <string name="q_a_filter_hint">搜索问答信息</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
</resources>
