<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/reply"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:text="@string/text_replay" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/less_light_gray"></View>

    <TextView
        android:visibility="gone"
        android:id="@+id/like"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:text="@string/text_like" />

    <View
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/less_light_gray"></View>

    <TextView
        android:id="@+id/report"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:text="@string/text_report" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/less_light_gray"></View>

    <TextView
        android:id="@+id/copy"
        style="@style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp"
        android:text="@string/text_copy" />
</LinearLayout>