<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/article_bottom_height"
    android:layout_gravity="bottom"
    android:background="@drawable/lock_button_background"
    android:orientation="vertical">

    <View
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_line_rule"
        android:background="@drawable/up_shade_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/action_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:src="@drawable/icon_send" />

                <TextView
                    style="@style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_send"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/less_light_gray"></View>

        <RelativeLayout
            android:id="@+id/action_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:src="@drawable/icon_comment" />

                <TextView
                    style="@style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_comment"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/less_light_gray"></View>

        <RelativeLayout
            android:id="@+id/action_like"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="8dp"
                    android:src="@drawable/icon_like_gray" />

                <TextView
                    style="@style/TextAppearance.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_good"
                    android:textColor="@color/dark_gray" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>



